♻️ Resolve SonarQube findings in delivery services